# durable-skies

./: .casper.json  .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  compose.yml
.claude/: settings.json
.claude/project-memory/: MEMORY.md
.claude/project-memory/references/: agent_placement_at_decision_points.md  architecture_drone_entity.md  battery_threading_for_anomaly.md  cmux_compose_port_remapping.md  compensation_must_stream_telemetry.md  durability_constraints.md  fleet_push_pull_split.md  freeze_position_at_incident.md  frontend_docker_node24.md  frontend_is_backend_driven.md  nuxt_config_process_workaround.md  progressive_charging_and_dispatch_gate.md  redis_telemetry_split.md  staleness_filter_antipattern.md  temporal_history_volume.md  workflow_signature_migration.md
.cmux/: post-create.sh  pre-destroy.sh
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  Makefile  pyproject.toml
backend/src/durable_skies/: __init__.py  __main__.py  availability.py  config.py  events.py  models.py  redis_client.py  telemetry.py  worker.py  world.py
backend/src/durable_skies/activities/: __init__.py  drone.py  drone_signal.py  fleet.py  fleet_signal.py  world.py
backend/src/durable_skies/agents/: __init__.py  anomaly.py  dispatcher.py  drone.py
backend/src/durable_skies/api/: server.py
backend/src/durable_skies/workflows/: __init__.py  _helpers.py  delivery.py  drone.py  drone_entity.py  fleet.py  order.py
frontend/: Dockerfile  Makefile  eslint.config.mjs  nuxt.config.ts  package.json  pnpm-lock.yaml
frontend/app/: app.vue
frontend/app/assets/css/: main.css
frontend/app/components/: EventLog.vue  FleetMap.vue  WorkflowRegistry.vue
frontend/app/composables/: fleetConstants.ts  useFleet.ts
frontend/app/types/: fleet.ts
