[project]
name = "durable-skies"
version = "0.1.0"
description = "Durable multi-agent drone delivery demo built with Google ADK and Temporal."
authors = [
    { name = "Alexandre Roman", email = "alexandre.roman@temporal.io" }
]
requires-python = ">=3.12,<3.14"
dependencies = [
    "temporalio[google-adk]>=1.27.0",
    "google-adk>=1.33.0",
    "litellm>=1.83.14",
    "anthropic>=0.101.0",
    "fastapi>=0.136.1",
    "uvicorn[standard]>=0.46.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "redis>=7.4",
]

[project.scripts]
durable-skies-worker = "durable_skies.worker:main"
durable-skies-api = "durable_skies.api.server:main"

[dependency-groups]
dev = [
    "ruff>=0.15.12",
    "watchfiles>=1.1.1",
]

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

